--- a/com.io7m.jnfp.core/pom.xml
+++ b/com.io7m.jnfp.core/pom.xml
@@ -7,13 +7,13 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.io7m.jnfp</groupId>
-    <artifactId>io7m-jnfp</artifactId>
+    <artifactId>com.io7m.jnfp</artifactId>
     <version>0.1.1</version>
   </parent>
-  <artifactId>io7m-jnfp-core</artifactId>
+  <artifactId>com.io7m.jnfp.core</artifactId>
 
   <packaging>bundle</packaging>
-  <name>io7m-jnfp-core</name>
+  <name>com.io7m.jnfp.core</name>
   <description>Normalized fixed-point (Core)</description>
   <url>http://io7m.github.io/jnfp/</url>
 
@@ -26,15 +26,15 @@
   <dependencies>
     <dependency>
       <groupId>com.io7m.jnull</groupId>
-      <artifactId>io7m-jnull-core</artifactId>
+      <artifactId>com.io7m.jnull.core</artifactId>
     </dependency>
     <dependency>
       <groupId>com.io7m.junreachable</groupId>
-      <artifactId>io7m-junreachable-core</artifactId>
+      <artifactId>com.io7m.junreachable.core</artifactId>
     </dependency>
     <dependency>
       <groupId>com.io7m.junsigned</groupId>
-      <artifactId>io7m-junsigned-core</artifactId>
+      <artifactId>com.io7m.junsigned.core</artifactId>
     </dependency>
 
     <dependency>
