--- a/com.io7m.jnfp.documentation/pom.xml
+++ b/com.io7m.jnfp.documentation/pom.xml
@@ -7,15 +7,19 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.io7m.jnfp</groupId>
-    <artifactId>io7m-jnfp</artifactId>
+    <artifactId>com.io7m.jnfp</artifactId>
     <version>0.1.1</version>
   </parent>
-  <artifactId>io7m-jnfp-documentation</artifactId>
+  <artifactId>com.io7m.jnfp.documentation</artifactId>
 
   <packaging>jar</packaging>
-  <name>io7m-jnfp-documentation</name>
+  <name>com.io7m.jnfp.documentation</name>
   <description>Normalized fixed-point (Documentation)</description>
   <url>http://io7m.github.io/jnfp/</url>
+
+  <properties>
+    <mdep.analyze.skip>true</mdep.analyze.skip>
+  </properties>
 
   <scm>
     <url>${project.parent.scm.url}</url>
@@ -25,14 +29,14 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.io7m.jnull</groupId>
-      <artifactId>io7m-jnull-core</artifactId>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>com.io7m.jnfp.core</artifactId>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>io7m-jnfp-core</artifactId>
-      <version>${project.version}</version>
+      <groupId>com.io7m.jnull</groupId>
+      <artifactId>com.io7m.jnull.core</artifactId>
     </dependency>
   </dependencies>
 
