--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
   <parent>
     <groupId>com.io7m.primogenitor</groupId>
     <artifactId>com.io7m.primogenitor</artifactId>
-    <version>2.0.0</version>
+    <version>3.0.0-beta0004</version>
   </parent>
 
   <groupId>com.io7m.jnfp</groupId>
   <artifactId>com.io7m.jnfp</artifactId>
-  <version>1.0.0</version>
+  <version>2.0.0</version>
 
   <packaging>pom</packaging>
   <name>com.io7m.jnfp</name>
@@ -21,17 +21,12 @@
   <url>http://github.com/io7m/jnfp</url>
 
   <modules>
-    <module>com.io7m.jnfp.checkstyle</module>
     <module>com.io7m.jnfp.core</module>
     <module>com.io7m.jnfp.documentation</module>
   </modules>
 
   <properties>
-    <siteReposDirectory>com/io7m/jnfp</siteReposDirectory>
-    <siteDocumentationDirectory>com/io7m/jnfp/com.io7m.jnfp.documentation</siteDocumentationDirectory>
-    <io7m.checkstyle.artifact>com.io7m.jnfp.checkstyle</io7m.checkstyle.artifact>
-    <io7m.checkstyle.path>/com/io7m/jnfp/checkstyle/checkstyle.xml</io7m.checkstyle.path>
-    <io7m.api.previousVersion>0.1.2</io7m.api.previousVersion>
+    <io7m.api.previousVersion>1.0.0</io7m.api.previousVersion>
   </properties>
 
   <licenses>
@@ -87,7 +82,7 @@
       <dependency>
         <groupId>com.io7m.junreachable</groupId>
         <artifactId>com.io7m.junreachable.core</artifactId>
-        <version>2.0.0</version>
+        <version>2.1.1</version>
       </dependency>
       <dependency>
         <groupId>com.io7m.junsigned</groupId>
