--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,8 @@
   </distributionManagement>
 
   <ciManagement>
-    <system>Travis CI</system>
-    <url>https://travis-ci.org/io7m/jnfp</url>
+    <system>GitHub Actions</system>
+    <url>https://github.com/jnfp/actions</url>
   </ciManagement>
 
   <prerequisites>
