--- a/com.io7m.jnfp.documentation/pom.xml
+++ b/com.io7m.jnfp.documentation/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.io7m.jnfp</groupId>
     <artifactId>com.io7m.jnfp</artifactId>
-    <version>2.0.0</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>com.io7m.jnfp.documentation</artifactId>
 
