Update copyright headers, URLs

--- a/com.io7m.jnfp.core/pom.xml
+++ b/com.io7m.jnfp.core/pom.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
@@ -15,7 +16,7 @@
   <packaging>jar</packaging>
   <name>com.io7m.jnfp.core</name>
   <description>Normalized fixed-point (Core)</description>
-  <url>http://io7m.github.io/jnfp/</url>
+  <url>https://www.io7m.com/software/jnfp</url>
 
   <dependencies>
     <dependency>
