--- a/com.io7m.jnfp.core/pom.xml
+++ b/com.io7m.jnfp.core/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>com.io7m.jnfp</groupId>
     <artifactId>com.io7m.jnfp</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0</version>
   </parent>
   <artifactId>com.io7m.jnfp.core</artifactId>
 
