--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
   <groupId>com.io7m.jnfp</groupId>
   <artifactId>com.io7m.jnfp</artifactId>
-  <version>3.0.0-SNAPSHOT</version>
+  <version>3.0.0</version>
 
   <packaging>pom</packaging>
   <name>com.io7m.jnfp</name>
