--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
   <modules>
     <module>com.io7m.jnfp.core</module>
     <module>com.io7m.jnfp.documentation</module>
+    <module>com.io7m.jnfp.tests</module>
   </modules>
 
   <properties>
@@ -38,9 +39,9 @@
   </licenses>
 
   <scm>
-    <url>https://github.com/io7m/jnfp</url>
-    <connection>scm:git:https://github.com/io7m/jnfp</connection>
-    <developerConnection>scm:git:https://github.com/io7m/jnfp</developerConnection>
+    <url>https://www.github.com/io7m-com/jnfp</url>
+    <connection>scm:git:https://www.github.com/io7m-com/jnfp</connection>
+    <developerConnection>scm:git:https://www.github.com/io7m-com/jnfp</developerConnection>
   </scm>
 
   <developers>
@@ -53,7 +54,7 @@
   </developers>
 
   <issueManagement>
-    <url>http://github.com/io7m/jnfp/issues</url>
+    <url>http://www.github.com/io7m-com/jnfp/issues</url>
     <system>GitHub Issues</system>
   </issueManagement>
 
@@ -71,7 +72,7 @@
 
   <ciManagement>
     <system>GitHub Actions</system>
-    <url>https://github.com/jnfp/actions</url>
+    <url>https://www.github.com/io7m-com/jnfp/actions</url>
   </ciManagement>
 
   <prerequisites>
